--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "prisma generate & next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "vercel-build": "npm install --legacy-peer-deps && prisma generate & next build"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.20.0",
