--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "prisma generate & next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate",
-    "vercel-build": "npm install --legacy-peer-deps && prisma generate & next build"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.20.0",
