--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.15.0",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
     "prisma": "^6.8.2",
